syntax = "proto3";


package distributed;


service Node{
    rpc SendMessage(MessageRequest) returns (MessageResponse);
}


message MessageRequest{
    string message = 1;
}

message MessageResponse{
    string response = 1;
}